se añadio sass y animaciones

--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -7,11 +7,14 @@
         <link rel="shortcut icon" href="../img/Logo1.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+BE+VLG:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 <body>
     <header class="encabezado">
         <img class="logo" src="../img/Logo.jpeg" alt="Independiente">
-        <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
+        <h1 class="titulo-principal">Club atletico Independiente</h1>
         <ul class="lista-principal">
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./club.html">Club</a></li>
@@ -21,59 +24,61 @@
         </ul>
     </header>
     <br><br>
-    <Main>
-        <nav class="arqueros">
-            <h1>Plantel del 2024</h1>
-            <h2>Arqueros:</h2>
-            <nav class="atajan">
-                <img src="../img/33_rodrigo_rey.jpg" alt="">
-                <img src="../img/25_diego_segovia.jpg" alt="">
-                <img src="../img/12_mateo_morro.jpg" alt="">
+    <Main class="cuerpo-pagina">
+        <div class="plantel-completo">
+            <nav class="arqueros">
+                <h1>Plantel del 2024</h1>
+                <h2>Arqueros:</h2>
+                <nav class="atajan">
+                    <img class="jugadores" src="../img/33_rodrigo_rey.jpg" alt="">
+                    <img class="jugadores" src="../img/25_diego_segovia.jpg" alt="">
+                    <img class="jugadores" src="../img/12_mateo_morro.jpg" alt="">
+                </nav>
             </nav>
-        </nav>
-        <nav class="defensa">
-            <h2>Defensa:</h2>
-            <nav class="defensores">
-                <img src="../img/02_joaquín_laso.jpg" alt="">
-                <img src="../img/03_adrián_sporle.jpg" alt="">
-                <img src="../img/03_edgar_elizalde.jpg" alt="">
-                <img src="../img/04_mauricio_isla.jpg" alt="">
-                <img src="../img/07_julio_buffarini.jpg" alt="">
-                <img src="../img/15_damian_perez.jpg" alt="">
-                <img src="../img/26_felipe_aguilar.jpg" alt="">
-                <img src="../img/29-juan-fedorco.jpg" alt="">
-                <img src="../img/31_fernando_da_rosa.jpg" alt="">
-                <img src="../img/79_ayrton_costa.jpg" alt="">
+            <nav class="defensa">
+                <h2>Defensa:</h2>
+                <nav class="defensores">
+                    <img class="jugadores" src="../img/02_joaquín_laso.jpg" alt="">
+                    <img class="jugadores" src="../img/03_adrián_sporle.jpg" alt="">
+                    <img class="jugadores" src="../img/03_edgar_elizalde.jpg" alt="">
+                    <img class="jugadores" src="../img/04_mauricio_isla.jpg" alt="">
+                    <img class="jugadores" src="../img/07_julio_buffarini.jpg" alt="">
+                    <img class="jugadores" src="../img/15_damian_perez.jpg" alt="">
+                    <img class="jugadores" src="../img/26_felipe_aguilar.jpg" alt="">
+                    <img class="jugadores" src="../img/29-juan-fedorco.jpg" alt="">
+                    <img class="jugadores" src="../img/31_fernando_da_rosa.jpg" alt="">
+                    <img class="jugadores" src="../img/79_ayrton_costa.jpg" alt="">
+                </nav>
             </nav>
-        </nav>
-        <nav class="mediocampo">
-            <h2>Medicampo:</h2>
-            <nav class="medio-campo">
-                <img src="../img/08_gabriel_neves.jpg" alt="">
-                <img src="../img/10_santiago_toloza.jpg" alt="">
-                <img src="../img/11_federico_mancuello.jpg" alt="">
-                <img src="../img/17_lucas_gonzález.jpg" alt="">
-                <img src="../img/19_alex_luna.jpg" alt="">
-                <img src="../img/30_tomás_parmo.jpg" alt="">
-                <img src="../img/21_david_martínez.jpg" alt="">
-                <img src="../img/35_santiago_salle.jpg" alt="">
-                <img src="../img/23_ivan_marcone.jpg" alt="">
-                <img src="../img/28_jhonny_quiñonez.jpg" alt="">
-                <img src="../img/27_diego_tarzia.jpg" alt="">
+            <nav class="mediocampo">
+                <h2>Medicampo:</h2>
+                <nav class="medio-campo">
+                    <img class="jugadores" src="../img/08_gabriel_neves.jpg" alt="">
+                    <img class="jugadores" src="../img/10_santiago_toloza.jpg" alt="">
+                    <img class="jugadores" src="../img/11_federico_mancuello.jpg" alt="">
+                    <img class="jugadores" src="../img/17_lucas_gonzález.jpg" alt="">
+                    <img class="jugadores" src="../img/19_alex_luna.jpg" alt="">
+                    <img class="jugadores" src="../img/30_tomás_parmo.jpg" alt="">
+                    <img class="jugadores" src="../img/21_david_martínez.jpg" alt="">
+                    <img class="jugadores" src="../img/35_santiago_salle.jpg" alt="">
+                    <img class="jugadores" src="../img/23_ivan_marcone.jpg" alt="">
+                    <img class="jugadores" src="../img/28_jhonny_quiñonez.jpg" alt="">
+                    <img class="jugadores" src="../img/27_diego_tarzia.jpg" alt="">
+                </nav>
             </nav>
-        </nav>
-        <nav class="delanteros">
-            <h2>Delanteros:</h2>
-            <nav class="delantera">
-                <img src="../img/09_gabriel_Ávalos.jpg" alt="">
-                <img src="../img/18_ignacio_maestro_puch.jpg" alt="">
-                <img src="../img/20_rodrigo_márquez.jpg" alt="">
-                <img src="../img/22_javier_ruiz.jpg" alt="">
-                <img src="../img/24_santiago_lópez.jpg" alt="">
-                <img src="../img/34_matias_gimenez.jpg" alt="">
-                <img src="../img/32_aleixs_canelo.jpg" alt="">
+            <nav class="delanteros">
+                <h2>Delanteros:</h2>
+                <nav class="delantera">
+                    <img class="jugadores" src="../img/09_gabriel_Ávalos.jpg" alt="">
+                    <img class="jugadores" src="../img/18_ignacio_maestro_puch.jpg" alt="">
+                    <img class="jugadores" src="../img/20_rodrigo_márquez.jpg" alt="">
+                    <img class="jugadores" src="../img/22_javier_ruiz.jpg" alt="">
+                    <img class="jugadores" src="../img/24_santiago_lópez.jpg" alt="">
+                    <img class="jugadores" src="../img/34_matias_gimenez.jpg" alt="">
+                    <img class="jugadores" src="../img/32_aleixs_canelo.jpg" alt="">
+                </nav>
             </nav>
-        </nav>
+        </div>    
     </Main>
     <br><br>
     <footer class="pie-pagina">
