--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="./img/Logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+BE+VLG:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="encabezado">
@@ -24,6 +27,7 @@
     <Main class="cuerpo-pagina">
         <nav>
             <section class="descripcion-club">
+                <h1>Independiente</h1>
                 <p>El Club Atlético Independiente es una entidad deportiva y educativa de la ciudad de Avellaneda, situada en el sur del Gran Buenos Aires, Argentina. Su fecha de fundación oficial es el 1 de enero de 1905, aunque el club como tal existe desde el 4 de agosto de 1904.9​10​11​ El fútbol masculino es su disciplina más destacada, cuyo primer equipo participa en la Primera División de Argentina, aunque también se practican otras disciplinas deportivas a nivel amateur y semiprofesional.</p>
 
                 <p>Ejerce su localía en el Estadio Libertadores de América-Ricardo Enrique Bochini, que cuenta con un aforo de 49 592 espectadores.12​ El color que identifica al equipo es el rojo, color que utiliza en su uniforme desde 1908 y le da su principal apodo de «El Rojo».13​</p>
@@ -31,15 +35,14 @@
                 <p>Es uno de los clubes con mayor renombre de Argentina, extendiendo su legado también en América del Sur y el mundo. En el ámbito local, «El Rojo» es considerado uno de los cinco grandes del fútbol argentino,14​ protagonizando el Clásico de Avellaneda con Racing Club. Es poseedor de 16 ligas y 10 copas nacionales, la primera de ellas siendo la Copa Adolfo Bullrich de 1909. Ascendió por primera vez a la Primera División de Argentina en 1912, dejando de participar en ella solamente durante la temporada 2013-14.</p>
                 <img class="equipo-1" src="./img/Independiente1948.jpg" alt="equipo">
                 <p>En el ámbito internacional, el equipo ha conseguido el récord de siete títulos en la Copa Libertadores de América (1964, 1965, 1972, 1973, 1974, 1975 y 1984), con el hito de haber sido el único club en ganar cuatro finales consecutivas. Junto con la Libertadores, es el máximo ganador de cuatro competencias internacionales distintas: la Copa Interamericana con tres títulos (1973, 1974 y 1976), la Supercopa Sudamericana con dos (1994 y 1995, al igual que Cruzeiro) y la Copa Sudamericana también con dos (2010 y 2017, récord compartido con Boca Juniors, Athletico Paranaense e Independiente del Valle).15​ También se consagró en la Recopa Sudamericana 1995 y en la Copa Suruga Bank 2018. Si se incluyen los campeonatos rioplatenses de fútbol, el palmarés total asciende a veinte títulos, con las ediciones 1938 y 1939 de la Copa Dr. Ricardo Aldao.16​</p>
-                    
+                <div>
+                    <img class="estadio-1" src="./img/independiente-club-estadio.jpg" alt="estadio_independiente">
+                </div>
                 <p>Con base en los mencionados logros Independiente obtuvo su apodo de «Rey de Copas», asdfasdfasfd tras obtener su 12.º título internacional (en referencia a la carta homónima de la baraja española).17​ Sus mayores logros deportivos los obtuvo en los años 1973 y 1984 cuando se consagró campeón mundial en la Copa Intercontinental, derrotando a los campeones europeos: la Juventus de Italia y el Liverpool de Inglaterra respectivamente. Con su victoria ante Liverpool en Japón, Independiente ganó el primer enfrentamiento entre un equipo argentino y uno británico tras la Guerra de Malvinas, razón por la cual fue llamado el «Orgullo Nacional».18​ También generó un impacto en el mundo del fútbol cuando en 1953 derrotó por 6‒0 como visitante al Real Madrid español y 8‒1 al Sporting portugués.19​</p>
                     
                 <p>En el año 2009 la Federación Internacional de Historia y Estadísticas de Fútbol (IFFHS) realizó un ranking internacional del siglo xx, ubicando a Independiente como el segundo mejor equipo sudamericano y mejor equipo argentino de dicho siglo.20​</p>
             </section>
         </nav>
-        <div>
-            <img class="estadio-1" src="./img/independiente-club-estadio.jpg" alt="estadio_independiente">
-        </div>
     </Main>
     <br><br>
     <footer class="pie-pagina">
