--- a/pages/socios.html
+++ b/pages/socios.html
@@ -7,11 +7,14 @@
         <link rel="shortcut icon" href="../img/Logo1.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+BE+VLG:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 <body>
     <header class="encabezado">
         <img class="logo" src="../img/Logo.jpeg" alt="Independiente">
-        <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
+        <h1 class="titulo-principal">Club atletico Independiente</h1>
         <ul class="lista-principal">
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./club.html">Club</a></li>
@@ -21,7 +24,7 @@
         </ul>
     </header>
     <br><br>
-    <Main>
+    <Main class="cuerpo-pagina">
         <nav>
             <section id="seccion-1">
                 <h2>Seccion para socios</h2>
