se agrego todo lo pedido para el proyecto final

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAI Independiente</title>
     <link rel="shortcut icon" href="./img/Logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+BE+VLG:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <meta name="descripcion" content="Pagina informativa sobre el Club Atletico Independiente">
+    <meta name="keywords" content="CAI independiente de avellaneda club argentino">
+    <meta name="author" content="Axel Matias Cesarini">
+    <meta property="og:title" content="pagina de Independiente">
+    <meta property="og:descripcion" content="pagina dedicada al equipo que mas copas internacionales tiene y el rey de la libertadores, el Club Atletico Independiente de Avellaneda">
+    <title>CAI Independiente</title>
 </head>
 <body>
     <header class="encabezado">
@@ -24,10 +29,10 @@
         </ul>
     </header>
     <br><br>
+    <h1>Independiente</h1>
     <Main class="cuerpo-pagina">
         <nav>
             <section class="descripcion-club">
-                <h1>Independiente</h1>
                 <p>El Club Atlético Independiente es una entidad deportiva y educativa de la ciudad de Avellaneda, situada en el sur del Gran Buenos Aires, Argentina. Su fecha de fundación oficial es el 1 de enero de 1905, aunque el club como tal existe desde el 4 de agosto de 1904.9​10​11​ El fútbol masculino es su disciplina más destacada, cuyo primer equipo participa en la Primera División de Argentina, aunque también se practican otras disciplinas deportivas a nivel amateur y semiprofesional.</p>
 
                 <p>Ejerce su localía en el Estadio Libertadores de América-Ricardo Enrique Bochini, que cuenta con un aforo de 49 592 espectadores.12​ El color que identifica al equipo es el rojo, color que utiliza en su uniforme desde 1908 y le da su principal apodo de «El Rojo».13​</p>
