--- a/pages/cancha.html
+++ b/pages/cancha.html
@@ -24,6 +24,7 @@
     </ul>
 </header>
     <br><br>
+    <h1>Nuestro estadio</h1>
     <Main class="cuerpo-pagina">
       <div class="efecto-carousel">
         <div id="carouselExample" class="carousel slide">
@@ -49,7 +50,7 @@
         </div>
       </div>
         <nav>
-            <section>
+            <section class="seccion1">
             <h1>Estadio Libertadores de America</h1>
             <p>El Estadio Libertadores de América-Ricardo Enrique Bochini,2​ es un estadio de fútbol de Argentina, ubicado en la ciudad de Avellaneda, del partido homónimo, en la provincia de Buenos Aires, propiedad del Club Atlético Independiente.</p>
 
