--- a/pages/club.html
+++ b/pages/club.html
@@ -24,9 +24,9 @@
         </ul>
     </header>
     <br><br>
+    <h1>Historia del club</h1>
     <Main class="cuerpo-pagina">
         <nav>
-            <h1>Historia del club</h1>
             <div class="historia-club">  
                 <p>Independiente surgió en 1904 por un grupo de empleados de la tienda "A la Ciudad de Londres", ubicada en el barrio de Montserrat de la Ciudad Autónoma de Buenos Aires. Estos empleados, los más jóvenes y más afectados por la precariedad laboral en la tienda, a pesar de pagar la cuota social, fueron marginados del club de fútbol representativo de la tienda, llamado Maipo-Banfield Football Club (integrado por los trabajadores más elitistas). Sólo se les permitía acudir como espectadores. El 4 de agosto de ese año se reunieron en un bar, rechazaron una invitación para formar parte de Atlanta y proclamaron la creación del "Independiente Foot-Ball Club", simbolizando sus ideales independentistas. Rosendo Degiorgi fue quien le dio nombre al club y fue elegido como primer presidente, abriendo la sede del club en su propia casa. La primera camiseta del equipo fue blanca con un escudo azul de detalles blancos, similar al del equipo Saint Andrew's, el primer campeón del fútbol argentino en 1891. Quince días después, el 19 de agosto, jugaron el primer partido de su historia, empatando 2-2 con Atlanta.</p>
                 <img src="../img/camiseta historica.jpg">  
@@ -53,5 +53,6 @@
         <a href="https://www.Facebook.com" target="_blank">Facebook</a>
         <a href="https://www.Instagram.com" target="_blank">Instagram</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
