--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -24,10 +24,10 @@
         </ul>
     </header>
     <br><br>
+    <h1>Plantel del 2024</h1>
     <Main class="cuerpo-pagina">
         <div class="plantel-completo">
             <nav class="arqueros">
-                <h1>Plantel del 2024</h1>
                 <h2>Arqueros:</h2>
                 <nav class="atajan">
                     <img class="jugadores" src="../img/33_rodrigo_rey.jpg" alt="">
@@ -38,16 +38,16 @@
             <nav class="defensa">
                 <h2>Defensa:</h2>
                 <nav class="defensores">
-                    <img class="jugadores" src="../img/02_joaquín_laso.jpg" alt="">
-                    <img class="jugadores" src="../img/03_adrián_sporle.jpg" alt="">
-                    <img class="jugadores" src="../img/03_edgar_elizalde.jpg" alt="">
-                    <img class="jugadores" src="../img/04_mauricio_isla.jpg" alt="">
-                    <img class="jugadores" src="../img/07_julio_buffarini.jpg" alt="">
-                    <img class="jugadores" src="../img/15_damian_perez.jpg" alt="">
-                    <img class="jugadores" src="../img/26_felipe_aguilar.jpg" alt="">
-                    <img class="jugadores" src="../img/29-juan-fedorco.jpg" alt="">
-                    <img class="jugadores" src="../img/31_fernando_da_rosa.jpg" alt="">
-                    <img class="jugadores" src="../img/79_ayrton_costa.jpg" alt="">
+                        <img class="jugadores" src="../img/02_joaquín_laso.jpg">
+                        <img class="jugadores" src="../img/03_adrián_sporle.jpg">
+                        <img class="jugadores" src="../img/03_edgar_elizalde.jpg">
+                        <img class="jugadores" src="../img/04_mauricio_isla.jpg">
+                        <img class="jugadores" src="../img/07_julio_buffarini.jpg">
+                        <img class="jugadores" src="../img/15_damian_perez.jpg">
+                        <img class="jugadores" src="../img/26_felipe_aguilar.jpg">
+                        <img class="jugadores" src="../img/29-juan-fedorco.jpg">
+                        <img class="jugadores" src="../img/31_fernando_da_rosa.jpg">
+                        <img class="jugadores" src="../img/79_ayrton_costa.jpg">
                 </nav>
             </nav>
             <nav class="mediocampo">
@@ -87,5 +87,6 @@
         <a href="https://www.Facebook.com" target="_blank">Facebook</a>
         <a href="https://www.Instagram.com" target="_blank">Instagram</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
