--- a/pages/socios.html
+++ b/pages/socios.html
@@ -24,53 +24,68 @@
         </ul>
     </header>
     <br><br>
-    <Main class="cuerpo-pagina">
-        <nav>
-            <section id="seccion-1">
-                <h2>Seccion para socios</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iusto dolorem explicabo pariatur aliquam! Voluptas earum tenetur sed suscipit! Dolore maiores itaque tempore, harum laboriosam odit eaque dolorum molestiae totam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo in magnam accusantium perferendis cum asperiores fuga id reiciendis? Sit voluptatibus dolorum accusantium quaerat vel voluptate repudiandae qui sapiente ad odit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aliquid ipsum omnis enim repellat ipsa quos, explicabo et, perferendis numquam est. Deleniti at ratione molestias aspernatur tenetur! Vel, quam reprehenderit!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, tempora provident, nemo pariatur numquam commodi eos nostrum neque mollitia ut nihil, iusto odit modi quo optio quam. Dolor, magni corrupti?</p>
-            </section>
-        </nav>
-        </nav>
-        <div>
-            <img src="../clase1/img/Logo.jpeg" alt="Logo Independiente">
-        </div>
-        <ol>
-            <li>lista 1</li>
-            <li>lista 2
-                <ul>uno</ul>
-                <ul>dos</ul>
-                <ul>tres</ul>
-            </li>
-            <li>lista 3</li>
-            <li>lista 4</li>
-            <li>lista 5</li>
-            <li>lista 6</li>
-        </ol>
+        <section id="seccion-1">
+            <h1>Socios</h1>
+            <h2>esta seccion esta preparada para dar informacion del club con respecto a los socios. A continuacion, les daremos las ultimas noticias que el club comunico para los socios de Independiente:</h2>
+        </section>
+        <Main class="cuerpo-pagina">
+        <div class="noticias-general">
+            <div class="noticia1">
+                <div class="subtitulo-noticia">
+                    <img class="socios1" src="../img/socios1.jpg">
+                    <h3>Depto. de Mujeres, Género y Diversidad</h3>
+                    <p>El Departamento participó el sábado 29 de junio en lo que fue el Primer Congreso de Mujeres dirigentes en el Complejo Cultural Municipal Rigolleau de Berazategui.</p>
+                </div>
+            </div>
+            <div class="noticia2">
+                <div class="subtitulo-noticia">
+                    <img class="socios2" src="../img/socios2.jpg">
+                    <h3>Depto. de Mujeres, Género y Diversidad</h3>
+                    <p>El Departamento de Mujeres, Género y Diversidad junto a Rojo Solidario del Club Atlético Independiente, participaron en la primera capacitación integral del fútbol argentino para mujeres dirigentes.</p>
+                </div>
+            </div>
+            <div class="noticia3">
+                <div class="subtitulo-noticia">
+                    <img class="socios3" src="../img/socios3.jpg">
+                    <h3>JUNTOS POR EL LITORAL</h3>
+                    <p>Independiente, junto a otros clubes, colaboró con los evacuados de las inundaciones.</p>
+                </div>
+            </div>
+            <div class="noticia4">
+                <div class="subtitulo-noticia">
+                    <img class="socios4" src="../img/socios4.jpg">
+                    <h3>IMPORTANTE CHARLA PARA VITALICIOS</h3>
+                    <p>Jornada de reflexión por el Día de la Toma de Conciencia del Abuso y Maltrato en las Personas Mayores</p>
+                </div>
+            </div>
+            <div class="video1">
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/iSfwHQSqlaw?si=G6EPgVS5p9h6qfV1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h2>JUVENILES EN VIVO VS. GODOY CRUZ</h2>
+                <p>Por la fecha 2 del campeonato, las categorías Menores reciben a Godoy Cruz en Villa Domínico. #Independiente #Diablas #TodoRojo JUVENILES EN VIVO VS. GODOY CRUZ</p>
+            </div>
+            <br><br>
+            <div class="formulario">
+                <div class="consultas">si queres dejar tu propia pregunta, por favor rellena el siguiente formulario:</div>
+                <form class="area-formulario">
+                    <input type="text" placeholder="ingrese su nombre">
+                    <br>
+                    <input type="email" placeholder="ingrese su email" required>
+                    <br>
+                    <textarea rows="4" cols="50" maxlength="500" placeholder="ingrese su pregunta"></textarea>
+                    <br>
+                    <input type="submit">
+                    <input type="reset">
+                </form>
+            </div>
+        </div>    
     </Main>
     <br><br>
     <footer>
-        <form class="pie-pagina">
-            <input type="text" placeholder="ingrese su nombre">
-            <br>
-            <input type="email" placeholder="ingrese su email" required>
-            <br>
-            <input type="password" placeholder="ingrese su contraseña">
-            <br>
-            <textarea rows="4" cols="50" maxlength="5" placeholder="ingrese su pregunta"></textarea>
-            <br>
-            <input type="radio" name="byc">Si
-            <input type="radio" name="byc">No
-            <br>
-            <input type="submit">
-            <input type="reset">
-            <input type="button" value="No hago nada :/">
-        </form>
         <a href="https://www.google.com" target="_blank">Google</a>
         <a href="https://www.Youtube.com" target="_blank">Youtube</a>
         <a href="https://www.Facebook.com" target="_blank">Facebook</a>
         <a href="https://www.Instagram.com" target="_blank">Instagram</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
